--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.469.0",
     "microcms-js-sdk": "^3.1.2",
     "next": "14.2.15",
     "react": "^18",
