--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^9.120.4",
     "@react-three/fiber": "^8.17.10",
+    "dayjs": "^1.11.13",
     "lucide-react": "^0.469.0",
     "microcms-js-sdk": "^3.1.2",
     "next": "14.2.15",
